--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "socket.io.dev.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "parcel serve index.html"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel-bundler": "^1.12.3"
+  },
+  "dependencies": {
+    "socket.io-client": "^2.2.0"
+  }
 }
