--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "parcel-bundler": "^1.12.3"
   },
   "dependencies": {
+    "mpegts_to_mp4": "^1.0.1",
     "socket.io-client": "^2.2.0"
   }
 }
